[tool.poetry]
name = "wags"
version = "0.1.0"
description = ""
authors = ["Andrii Makysmov <maximov.echo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
