[tool.poetry]
name = "wags"
version = "0.1.0"
description = ""
authors = ["Andrii Makysmov <maximov.echo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.12.0"
mypy = "^0.770"
flake8 = "^3.8.2"
mkdocs = "^1.1.2"
mkdocs-material = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
